# xkc

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh
.github/workflows/: desktop-release.yml  docker-publish.yml
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  LocalPanel.tsx  MainLayout.tsx  Setup.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
server/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
server/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
server/app/routers/: auth.py  export.py  imports.py  playlists.py  settings.py  social.py  stream_sync.py  sync.py  tags.py  tracks.py  users.py
server/app/services/: anlz.py  audio.py  dlp_writer.py  metadata.py  pdb_export.py  pdb_writer.py  scanner.py  streaming.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/components/: ActivityLog.tsx  InviteInbox.tsx  Player.tsx  SharePlaylistModal.tsx  Sidebar.tsx  TrackDetail.tsx  TrackTable.tsx  UploadZone.tsx  Waveform.tsx
web/src/lib/: api.ts  store.ts  uploadQueue.ts  utils.ts
web/src/pages/: Library.tsx  Login.tsx  Profile.tsx  Settings.tsx  Users.tsx
