[package]
name = "xkc-desktop"
version = "1.5.0"
description = "XKC DJ Library Manager"
authors = ["XKC"]
edition = "2021"

[lib]
name = "xkc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "xkc-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
notify = "6"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
zip = "2"

[profile.release]
opt-level = 3
strip = true
lto = true
